small spacing fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -241,7 +241,7 @@
     font-weight: 500;
     line-height: 26px;
     color: #3e4153;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     margin-top: 25px;
 }
 
